update spec and status codes
